# EasyLabelTauri

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AnnotationList.vue  AnnotationView.vue  AppHeader.vue  Canvas.vue  ClassList.vue  ClassModal.vue  HomeView.vue  SettingsModal.vue  ToolButton.vue
frontend/src/stores/: app.ts  project.ts  settings.ts
frontend/src/utils/: taskTypes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_annotate.rs  commands.rs  lib.rs  main.rs  models.rs
