[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EasyLabel Team"]
description = "A sci-fi styled data labeling tool for YOLO format annotations"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-build = { version = "2.0", features = [] }
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
