[package]
name = "easy-label"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "easy_label_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
dirs.workspace = true
rand.workspace = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
